# cool-rust-terminal

./: .gitignore  ARCHITECTURE.md  CURRENT_TASK.md  Cargo.toml  Makefile  README.md  install.sh  justfile
.cargo/: config.toml
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
assets/: cool-rust-term.desktop  icon.icns
assets/bdf_fonts/: profont12.bdf  profont17.bdf
crates/crt-app/: Cargo.toml
crates/crt-app/src/: config_ui.rs  main.rs
crates/crt-core/: Cargo.toml
crates/crt-core/src/: color.rs  config.rs  effects.rs  lib.rs  session.rs
crates/crt-layout/: Cargo.toml
crates/crt-layout/src/: lib.rs  tree.rs
crates/crt-renderer/: Cargo.toml
crates/crt-renderer/src/: atlas.rs  bdf.rs  burnin_pipeline.rs  crt_pipeline.rs  fonts.rs  gpu.rs  lib.rs  line_pipeline.rs  renderer.rs  text_pipeline.rs
crates/crt-terminal/: Cargo.toml
crates/crt-terminal/src/: lib.rs  process_info.rs  scrollback.rs  terminal.rs
shaders/: burnin.wgsl  crt.wgsl  line.wgsl  text.wgsl
