[workspace]
resolver = "2"
members = [
    "crates/crt-core",
    "crates/crt-terminal",
    "crates/crt-layout",
    "crates/crt-renderer",
    "crates/crt-app",
]

[workspace.package]
version = "0.2.6"
edition = "2021"
license = "GPL-3.0"
authors = ["Bart Riepe"]

[workspace.dependencies]
# Internal crates
crt-core = { path = "crates/crt-core" }
crt-terminal = { path = "crates/crt-terminal" }
crt-layout = { path = "crates/crt-layout" }
crt-renderer = { path = "crates/crt-renderer" }

# Terminal emulation
alacritty_terminal = "0.25"

# Windowing and input
winit = "0.30"

# GPU rendering
wgpu = "23"

# Font handling
fontdue = "0.9"

# Async runtime (for PTY)
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
pollster = "0.4"

# Math
bytemuck = { version = "1", features = ["derive"] }

# Platform utilities
dirs = "5"
libc = "0.2"

# Compression
zstd = "0.13"
