[package]
name = "crt-app"
description = "Main application binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cool-rust-term"
path = "src/main.rs"

[package.metadata.bundle]
name = "Cool Rust Term"
identifier = "com.bartriepe.cool-rust-term"
icon = ["assets/icon.icns"]
category = "public.app-category.developer-tools"
short_description = "CRT-style terminal emulator"
copyright = "Copyright © 2024 Bart Riepe. GPL-3.0 License."

[dependencies]
crt-core = { workspace = true }
crt-terminal = { workspace = true }
crt-layout = { workspace = true }
crt-renderer = { workspace = true }
alacritty_terminal = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pollster = { workspace = true }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
