[package]
name = "crt-app"
description = "Main application binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cool-rust-term"
path = "src/main.rs"

[package.metadata.bundle]
name = "Cool Rust Term"
identifier = "com.bartriepe.cool-rust-term"
icon = ["assets/icon.icns"]
category = "public.app-category.developer-tools"
short_description = "CRT-style terminal emulator"
copyright = "Copyright © 2024 Bart Riepe. GPL-3.0 License."

[package.metadata.deb]
name = "cool-rust-term"
maintainer = "Bart Riepe"
copyright = "2024, Bart Riepe"
license-file = ["../../LICENSE", "0"]
extended-description = """\
A CRT-styled terminal emulator written in Rust, featuring \
barrel distortion, scanlines, phosphor bloom, burn-in effects, \
and multi-pane support."""
section = "x11"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/cool-rust-term", "usr/bin/", "755"],
    ["../../assets/icon.png", "usr/share/icons/hicolor/256x256/apps/cool-rust-term.png", "644"],
    ["../../assets/cool-rust-term.desktop", "usr/share/applications/cool-rust-term.desktop", "644"],
    ["../../README.md", "usr/share/doc/cool-rust-term/README.md", "644"],
]

[dependencies]
crt-core = { workspace = true }
crt-terminal = { workspace = true }
crt-layout = { workspace = true }
crt-renderer = { workspace = true }
alacritty_terminal = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pollster = { workspace = true }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
